--- a/Test2.css
+++ b/Test2.css
@@ -67,7 +67,7 @@ span {
 
 #main {
     transition: margin-left .5s;
-    padding: 16px;
+    /* padding: 16px; */
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
