--- a/PSS/_Imports.razor
+++ b/PSS/_Imports.razor
@@ -6,5 +6,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using FrontendTest
-@using FrontendTest.Shared
+@using PSS
