Side panel looks good. Moving onto loading images now I think

--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -16,25 +16,22 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/PSS.css'>
 
-    <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-    <!-- Roboto font: https://fonts.google.com/specimen/Roboto -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-color: black; margin-left: 0px; margin-top: 0px;">
-    <div style="align-content: space-between;">
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><span class="icon_btn_text" href="Google.com">Photos</span></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><span class="icon_btn_text" href="Google.com">Albums</span></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xf06f;</span><span class="icon_btn_text" href="Google.com">Starred</span></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe92e;</span><span class="icon_btn_text" href="Google.com">Trash</span></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><span class="icon_btn_text" href="Google.com">Search</span></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><span class="icon_btn_text" href="Google.com">Upload</span></button>
-        <button onclick="location.href='Google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><span class="icon_btn_text" href="Google.com">Settings</span></button>
-    </div>
+<body style="background-color: black; margin-left: 0; margin-top: 0;">
+<nav style="align-content: space-between;">
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><span class="icon_btn_text">Photos</span></button>
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><span class="icon_btn_text">Albums</span></button>
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xf06f;</span><span class="icon_btn_text">Starred</span></button>
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe92e;</span><span class="icon_btn_text">Trash</span></button>
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><span class="icon_btn_text">Search</span></button>
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><span class="icon_btn_text">Upload</span></button>
+    <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><span class="icon_btn_text">Settings</span></button>
+</nav>
 
 </body>
 </html>
