going to start working on adding pics to flex

--- a/PSS/Client/Pages/Index.razor
+++ b/PSS/Client/Pages/Index.razor
@@ -1,3 +1,9 @@
 ﻿@page "/"
 
 @*TODO: add the flex here*@
+<div style="display: flex">
+    @code
+    {
+        //get items from db, then add here
+    }
+</div>
