--- a/PSS/Client/wwwroot/css/PSS.css
+++ b/PSS/Client/wwwroot/css/PSS.css
@@ -1,4 +1,5 @@
 ﻿/* This is probably illegal. Source: https://codepen.io/bennettfeely/pen/meymwg */
+/* These 2 are from Google */
 @font-face {
     font-family: 'Product Sans';
     font-style: normal;
@@ -19,7 +20,10 @@
     -moz-osx-font-smoothing: grayscale; /* Support for Firefox. */
 }
 
-/* Each button with an icon in the side bar has these */
+.photos-flexbox {
+
+}
+
 .icon_btn {
     color: white; /* Icon Color */
     background-color: black;
@@ -42,11 +46,10 @@
     padding-top: 11px;
 }
 
-.icon_btn:hover {
-    background-color: rgba(211, 211, 211, 0.1);
-}
+    .icon_btn:hover {
+        background-color: rgba(211, 211, 211, 0.1);
+    }
 
-/* Button text */
 .icon_btn_text {
     padding-left: 11px;
     color: white;
