--- a/PSS/Client/_Imports.razor
+++ b/PSS/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using PSS.Client
 @using PSS.Client.Shared
+@using System.Collections.Generic;
+@using MySql.Data.MySqlClient;
+@using PSS.Client.Backend;
