still not working

--- a/PSS/Client/Pages/Index.razor
+++ b/PSS/Client/Pages/Index.razor
@@ -1,11 +1,10 @@
 ﻿@page "/"
 
 <div style="display: flex">
-    @foreach(var media in mediaList)
+    @*@foreach(var media in mediaList)
     {
-        @*<img src=@media.path>*@
-        Console.WriteLine(media.path);
-    }
+        <img src=@media.path>
+    }*@
 </div>
 
 @code
