--- a/PSS/Client/Pages/Index.razor
+++ b/PSS/Client/Pages/Index.razor
@@ -1,19 +1,25 @@
 ﻿@page "/"
 
 <div style="display: flex">
-    @*@foreach(var media in mediaList)
-    {
-        <img src=@media.path>
-    }*@
+    @*@foreach (var media in mediaList)*@
+    @*{*@
+    @*<img src="\Pics and Vids\Test Pics\20210501_193043.jpg" style="max-width: 10%" />*@
+    @*}*@
+
 </div>
+
 
 @code
 {
-    public readonly List<Connection.Media> mediaList = LoadMediaTable();
+    public List<Connection.Media> mediaList = LoadMediaTable();
 
     public static List<Connection.Media> LoadMediaTable()
     {
         Connection c = new Connection();
-        return c.LoadMediaTable();
+        List<Connection.Media> l = new();
+        l = c.LoadMediaTable();
+        @*c.InsertMedia("new path", DateTime.Now);*@
+        @*List<Connection.Media> l = c.LoadMediaTable();*@
+        return l;
     }
 }
