--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
+@using PSS.Client.Backend
 
-<h1>Hello, world!</h1>
+@foreach (var media in mediaList)
+{
+    <img src=@media.path style="max-width: 10%; padding: 4px" alt=""/>
+}
 
-Welcome to your new app.
+@code {
+    public List<Connection.Media> mediaList = LoadMediaTable();
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    public static List<Connection.Media> LoadMediaTable()
+    {
+        Connection c = new Connection();
+        return c.LoadMediaTable();
+    }
+}
