Give NavMenu a top margin

--- a/PSS/Shared/NavMenu.razor
+++ b/PSS/Shared/NavMenu.razor
@@ -1,4 +1,4 @@
-﻿<nav style="align-content: space-between; float: left; margin-right: 5px">
+﻿<nav style="align-content: space-between; float: left; margin-right: 5px; margin-top: 10px">
     <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><span class="icon_btn_text">Photos</span></button>
     <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><span class="icon_btn_text">Albums</span></button>
     <button onclick="location.href='https://www.google.com'" type="button" class="icon_btn"><span class="material-icons">&#xf06f;</span><span class="icon_btn_text">Starred</span></button>
