--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -3,6 +3,13 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
+
+<script language="javascript">
+    function changeImage() {
+        /////////////////////
+    }
+</script>
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -10,7 +17,7 @@
     <title>PSS</title>
     <link href="css/PSS.css" rel="stylesheet" />
     <link rel="icon" href="gphotos icon.png">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"> @*https://stackoverflow.com/questions/50303454/how-to-use-the-new-material-design-icon-themes-outlined-rounded-two-tone-and*@
 </head>
 
 <body style="background-color: black; margin-left: 0; margin-top: 0;">
