--- a/PSS/wwwroot/css/PSS.css
+++ b/PSS/wwwroot/css/PSS.css
@@ -22,19 +22,8 @@
 
 /*Styling for the thumbnails for photos and videos*/
 .thumbnail {
-    /*    max-width: 8.5%;*/
-    /*    padding: 4px;*/
-    max-width: 100%;
-    max-height: 100%;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    overflow: auto;
-    position: fixed;
-    right: 0;
-    top: 0;
-    -o-object-fit: contain;
-    object-fit: contain;
+    max-width: 13%;
+    padding: 4px;
 }
 
 /*Checkbox that appears when hovering over a thumbnail*/
