--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -4,7 +4,7 @@
 <div style="display: flex">
     @foreach (Media media in mediaList)
     {
-        <img src=@media.path class="thumbnail" alt="" />
+        <img onclick="test()" src=@media.path class="thumbnail" alt="" />
     }
 </div>
 
