--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -3,6 +3,11 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
+<script language="javascript">
+    function onclick() {
+        document.getElementById(this.id).classList.toggle('big');
+    }
+</script>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
