--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -3,11 +3,16 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
-<script language="javascript">
-    function onclick() {
-        document.getElementById(this.id).classList.toggle('big');
+
+<script>
+    function changeSize(id) {
+        if (document.getElementById(id).getAttribute("class") === "thumbnail")
+            document.getElementById(id).setAttribute("class", "bigSize");
+        else
+            document.getElementById(id).setAttribute("class", "thumbnail");
     }
 </script>
+
 <html lang="en">
 <head>
     <meta charset="utf-8" />
