--- a/PSS/wwwroot/css/PSS.css
+++ b/PSS/wwwroot/css/PSS.css
@@ -27,7 +27,7 @@
 }
 
 /*https://stackoverflow.com/questions/18490334/responsive-image-full-screen-and-centered-maintain-aspect-ratio-not-exceed-wi/18490463*/
-.big {
+.bigSize {
     max-width: 100%;
     max-height: 100%;
     bottom: 0;
