--- a/PSS/Pages/_Host.cshtml
+++ b/PSS/Pages/_Host.cshtml
@@ -7,7 +7,7 @@
 <script>
     function changeSize(id) {
         if (document.getElementById(id).getAttribute("class") === "thumbnail")
-            document.getElementById(id).setAttribute("class", "bigSize");
+            document.getElementById(id).setAttribute("class", "imgView");
         else
             document.getElementById(id).setAttribute("class", "thumbnail");
     }
