--- a/PSS/wwwroot/css/PSS.css
+++ b/PSS/wwwroot/css/PSS.css
@@ -37,11 +37,18 @@
     object-fit: contain;
 }
 
+/*Used for zooming in/out in photo viewer*/
 .range {
     width: 200px;
     position: fixed; /*https://stackoverflow.com/a/11399610*/
     right: 20px;
+    top: 80px;
+    opacity: 0.3;
 }
+
+    .range:hover {
+        opacity: 0.7;
+    }
 
 /*These 3 are for the side panel buttons*/
 .icon_btn {
