fix bug where slider wouldn't reset on refresh. Description has SO link
https://stackoverflow.com/questions/19482289/html5-slider-controls-not-resetting-back-to-default-value-when-page-is-refreshed

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -4,7 +4,7 @@
 @layout EmptyLayout
 
 <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" />
-<input type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
+<input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
 
 @code {
     [Parameter]
