404 page looks good 👌

--- a/PSS/App.razor
+++ b/PSS/App.razor
@@ -4,7 +4,11 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <div class="centeredDiv">
+                <h1 class="whiteText">404. That's an error.</h1>
+                <p class="whiteText">The requested URL was not found.</p>
+                <a style="font-family: 'Product Sans'; color: rgb(6,69,173) " href="/"> Click me to go to the home page.</a>
+            </div>
         </LayoutView>
     </NotFound>
 </Router>
