increase brightness of "Click me..." link

--- a/PSS/App.razor
+++ b/PSS/App.razor
@@ -7,7 +7,7 @@
             <div class="centeredDiv">
                 <h1 class="whiteText">404. That's an error.</h1>
                 <p class="whiteText">The requested URL was not found.</p>
-                <a style="font-family: 'Product Sans'; color: rgb(6,69,173) " href="/"> Click me to go to the home page.</a>
+                <a style="font-family: 'Product Sans'; color: rgb(2, 97, 255) " href="/"> Click me to go to the home page.</a>
             </div>
         </LayoutView>
     </NotFound>
