--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -1,9 +1,21 @@
-﻿@page "/view/{id}"
+﻿@*Page for viewing full-sized images*@
+@page "/view/{id}"
 @using PSS.Backend
 @layout EmptyLayout
 
-<img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt=""/>
-<input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
+@{
+    string path = Connection.GetPathFromUuid(id);
+    if (path == "null") //If URL contains a UUID that isn't present in the database.
+    {
+        <NavMenu/>
+        <Error/>
+    }
+    else
+    {
+        <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt="" />
+        <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
+    }
+}
 
 @code {
     [Parameter]
