--- a/PSS/wwwroot/css/PSS.css
+++ b/PSS/wwwroot/css/PSS.css
@@ -85,6 +85,17 @@
     text-decoration: none;
 }
 
+/*Used for Index.razor if media has 0 items*/
+.centeredWhiteText {
+    color: white;
+    font-family: 'Product Sans';
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 44%;
+    margin: -100px 0 0 -150px;
+}
+
 /*Primarily used for the 404 page*/
 .whiteText {
     color: white;
