Improve 404 page layout

--- a/PSS/App.razor
+++ b/PSS/App.razor
@@ -5,9 +5,9 @@
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
             <div class="centeredDiv">
-                <h1 class="whiteText">404. That's an error.</h1>
-                <p class="whiteText">The requested URL was not found.</p>
-                <a style="font-family: 'Product Sans'; color: rgb(2, 97, 255) " href="/"> Click me to go to the home page.</a>
+                <h1 class="centeredWhiteText">404. That's an error.</h1>
+                <p class="centeredWhiteText">The requested URL was not found.</p>
+                <a class="centeredBlueText " href="/"> Click me to go to the home page.</a>
             </div>
         </LayoutView>
     </NotFound>
