--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -4,7 +4,7 @@
 @{
     if (mediaList.Count == 0)
     {
-        <h1 class="centeredWhiteText">Looks empty here...<br />Upload some items to get started.</h1>
+        <h1 class="bigCenteredWhiteText">Looks empty here...<br />Upload some items to get started.</h1>
     }
     else
     {
