--- a/PSS/Pages/Error.razor
+++ b/PSS/Pages/Error.razor
@@ -1,5 +1,5 @@
 ﻿<div class="centeredDiv">
-    <h1 class="whiteText">404. That's an error.</h1>
-    <p class="whiteText">The requested URL was not found.</p>
+    <h1 class="centeredWhiteText">404. That's an error.</h1>
+    <p class="centeredWhiteText">The requested URL was not found.</p>
     <a style="font-family: 'Product Sans'; color: rgb(2, 97, 255) " href="/"> Click me to go to the home page.</a>
 </div>
