give all NavMenu buttons their URLs (not implemented yet though)

--- a/PSS/Shared/NavMenu.razor
+++ b/PSS/Shared/NavMenu.razor
@@ -1,9 +1,10 @@
-﻿<nav style="align-content: space-between; float: left; margin-right: 10px; margin-left: 0px; margin-top: 0px;">
+﻿@*TODO: buttons that aren't implemented take you to the 404 page*@
+<nav style="align-content: space-between; float: left; margin-right: 10px; margin-left: 0px; margin-top: 0px;">
     <button onclick="location.href='/'" type="button" class="icon_btn"><span class="material-icons">&#xe3f4;</span><span class="icon_btn_text">Photos</span></button>
-    <button onclick="location.href=''" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><span class="icon_btn_text">Albums</span></button>
-    <button onclick="location.href=''" type="button" class="icon_btn"><span class="material-icons">&#xf06f;</span><span class="icon_btn_text">Starred</span></button>
-    <button onclick="location.href=''" type="button" class="icon_btn"><span class="material-icons">&#xe92e;</span><span class="icon_btn_text">Trash</span></button>
-    <button onclick="location.href=''" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><span class="icon_btn_text">Search</span></button>
-    <button onclick="location.href=''" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><span class="icon_btn_text">Upload</span></button>
-    <button onclick="location.href=''" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><span class="icon_btn_text">Settings</span></button>
+    <button onclick="location.href='albums'" type="button" class="icon_btn"><span class="material-icons">&#xe411;</span><span class="icon_btn_text">Albums</span></button>
+    <button onclick="location.href='starred'" type="button" class="icon_btn"><span class="material-icons">&#xf06f;</span><span class="icon_btn_text">Starred</span></button>
+    <button onclick="location.href='trash'" type="button" class="icon_btn"><span class="material-icons">&#xe92e;</span><span class="icon_btn_text">Trash</span></button>
+    <button onclick="location.href='search'" type="button" class="icon_btn"><span class="material-icons">&#xe8b6;</span><span class="icon_btn_text">Search</span></button>
+    <button onclick="location.href='upload'" type="button" class="icon_btn"><span class="material-icons">&#xe2c3;</span><span class="icon_btn_text">Upload</span></button>
+    <button onclick="location.href='settings'" type="button" class="icon_btn"><span class="material-icons">&#xe8b8;</span><span class="icon_btn_text">Settings</span></button>
 </nav>
