add back button to photo viewer but its CSS is not complete

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -7,13 +7,15 @@
     string path = Connection.GetPathFromUuid(id);
     if (path == "null") //If URL contains a UUID that isn't present in the database.
     {
-        <NavMenu/>
-        <Error/>
+        <NavMenu />
+        <Error />
     }
     else
     {
         <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt="" />
         <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
+        
+        <button onclick="window.history.back();" class="icon_btn"><span class="material-icons">west</span></button> @*Back button*@
     }
 }
 
