decrease size of back btn

--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -1,4 +1,4 @@
-﻿@*Page for viewing full-sized images*@
+@*Page for viewing full-sized images*@
 @page "/view/{id}"
 @using PSS.Backend
 @layout EmptyLayout
@@ -15,7 +15,7 @@
         <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt="" />
         <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
         
-        <button onclick="window.history.back();" class="circle_icon_btn"><span class="material-icons" style="font-size: 30px">west</span></button> @*Back button*@
+        <button onclick="window.history.back();" class="circle_icon_btn"><span class="material-icons" >west</span></button>
     }
 }
 
