--- a/PSS/Pages/View.razor
+++ b/PSS/Pages/View.razor
@@ -14,6 +14,7 @@
     {
         <img class="imgView" style="height: 100%" src="@Connection.GetPathFromUuid(id)" alt="" />
         <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="range">
+        <input autocomplete="off" type="range" min="100" max="275" value="100" step="5" oninput="document.querySelector('img').style.height = (this.value + '%')" class="zoomRange">
         
         <button onclick="window.history.back();" class="circle_icon_btn"><span class="material-icons" >west</span></button>
     }
