rename class for nav menu buttons

--- a/PSS/Shared/NavMenu.razor
+++ b/PSS/Shared/NavMenu.razor
@@ -1,10 +1,10 @@
 ﻿@*TODO: buttons that aren't implemented take you to the 404 page*@
 <nav style="align-content: space-between; float: left; margin-right: 10px; margin-left: 0px; margin-top: 0px;">
-    <button onclick="location.href='/'" class="icon_btn"><span class="material-icons">&#xe3f4;</span><span class="icon_btn_text">Photos</span></button>
-    <button onclick="location.href='albums'" class="icon_btn"><span class="material-icons">&#xe411;</span><span class="icon_btn_text">Albums</span></button>
-    <button onclick="location.href='starred'" class="icon_btn"><span class="material-icons">&#xf06f;</span><span class="icon_btn_text">Starred</span></button>
-    <button onclick="location.href='trash'" class="icon_btn"><span class="material-icons">&#xe92e;</span><span class="icon_btn_text">Trash</span></button>
-    <button onclick="location.href='search'" class="icon_btn"><span class="material-icons">&#xe8b6;</span><span class="icon_btn_text">Search</span></button>
-    <button onclick="location.href='upload'" class="icon_btn"><span class="material-icons">&#xe2c3;</span><span class="icon_btn_text">Upload</span></button>
-    <button onclick="location.href='settings'" class="icon_btn"><span class="material-icons">&#xe8b8;</span><span class="icon_btn_text">Settings</span></button>
+    <button onclick="location.href='/'" class="nav_btn"><span class="material-icons">&#xe3f4;</span><span class="nav_btn_text">Photos</span></button>
+    <button onclick="location.href='albums'" class="nav_btn"><span class="material-icons">&#xe411;</span><span class="nav_btn_text">Albums</span></button>
+    <button onclick="location.href='starred'" class="nav_btn"><span class="material-icons">&#xf06f;</span><span class="nav_btn_text">Starred</span></button>
+    <button onclick="location.href='trash'" class="nav_btn"><span class="material-icons">&#xe92e;</span><span class="nav_btn_text">Trash</span></button>
+    <button onclick="location.href='search'" class="nav_btn"><span class="material-icons">&#xe8b6;</span><span class="nav_btn_text">Search</span></button>
+    <button onclick="location.href='upload'" class="nav_btn"><span class="material-icons">&#xe2c3;</span><span class="nav_btn_text">Upload</span></button>
+    <button onclick="location.href='settings'" class="nav_btn"><span class="material-icons">&#xe8b8;</span><span class="nav_btn_text">Settings</span></button>
 </nav>
